--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "cmake.sourceDirectory": "/home/luis/MyGit/CG/Preparation for practical classes/code"
+    "cmake.sourceDirectory": "/home/luis/MyGit/CG/Preparation for practical classes/code",
+    "files.associations": {
+        "cmath": "cpp"
+    }
 }
